<?xml version="1.0"?>
<package format="3">
  <name>ros2_topic_logger</name>
  <version>0.1.0</version>
  <description>CSV-based ROS2 topic logger with hourly folders, file rotation, retention, and event-window raw logging for large topics.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
